--- a/demo/index.html
+++ b/demo/index.html
@@ -18,28 +18,23 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   </head>
   <body unresolved>
 
-    <backend-template title="Easy backend">
-      <backend-category
-        icon="icons:home"
-        name="Category 1">
-        <backend-page
-          name="Page 1">
+    <backend-template name="EASY BACKEND">
+      <backend-category icon="icons:home" name="Category 1" route="cat1">
+        <backend-page name="PAGE 1" route="page1">
+        <p>a</p>
         </backend-page>
-        <backend-page
-          name="Page 2">
+        <backend-page name="PAGE 2" route="page2">
+        <p>b</p>
         </backend-page>
-      </backend-page>
-    </backend-template>
-    <backend-category
-        icon="icons:dashboard"
-        name="Category 2">
-        <backend-page
-          name="Page 1">
+      </backend-category>
+      <backend-category icon="icons:dashboard" name="Category 2" route="cat2">
+        <backend-page name="PAGE 3" route="page3">
+        <p>c</p>
         </backend-page>
-        <backend-page
-          name="Page 2">
+        <backend-page name="PAGE 4" route="page4">
+        <p>d</p>
         </backend-page>
-      </backend-page>
+      </backend-category>
     </backend-template>
   </body>
 </html>
