--- a/backend-category.html
+++ b/backend-category.html
@@ -1,3 +1,6 @@
+<link rel="import" href="../iron-selector/iron-selectable.html">
+<!-- <link rel="import" href="../neon-slideshow/neon-slideshow-behavior.html">
+<link rel="import" href="../neon-slideshow/neon-slideshow-shared-styles.html"> -->
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="backend-page.html">
 
@@ -16,12 +19,13 @@ Example:
 
   <template>
     <style>
-      :host {
-        display: block;
-        box-sizing: border-box;
+      :host:not(.iron-selected) {
+        display: none;
       }
     </style>
-    
+    <!-- <div id="slides"> -->
+      <content></content>
+    <!-- </div> -->
   </template>
 
 </dom-module>
@@ -33,7 +37,21 @@ Example:
     is: 'backend-category',
 
     properties: {
-      name: String
+      icon: String,
+      name: String,
+      route: String,
+      attrForSelected: {
+        type: String,
+        value: 'route'
+      }
+    },
+
+    behaviors: [
+      Polymer.IronSelectableBehavior
+    ],
+
+    attached: function() {
+      this.selected = this.items[0].route;
     }
 
   });
