--- a/backend-template.html
+++ b/backend-template.html
@@ -1,5 +1,25 @@
-<link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="backend-category.html">
+<link rel="import" href="../iron-icon/iron-icon.html">
+<link rel="import" href="../iron-icons/iron-icons.html">
+<link rel="import" href="../iron-flex-layout/classes/iron-flex-layout.html">
+<link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
+<link rel="import" href="../iron-pages/iron-pages.html">
+<link rel="import" href="../iron-selector/iron-selectable.html">
+<link rel="import" href="../paper-drawer-panel/paper-drawer-panel.html">
+<link rel="import" href="../paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../paper-item/paper-icon-item.html">
+<link rel="import" href="../paper-menu/paper-menu.html">
+<link rel="import" href="../paper-menu/paper-submenu.html">
+<link rel="import" href="../paper-ripple/paper-ripple.html">
+<link rel="import" href="../paper-scroll-header-panel/paper-scroll-header-panel.html">
+<link rel="import" href="../paper-styles/typography.html">
+<link rel="import" href="../paper-styles/classes/shadow.html">
+<link rel="import" href="../paper-styles/color.html">
+<link rel="import" href="../paper-styles/default-theme.html">
+<link rel="import" href="../paper-tabs/paper-tabs.html">
+<link rel="import" href="../paper-tabs/paper-tab.html">
+<link rel="import" href="../paper-toolbar/paper-toolbar.html">
+<link rel="import" href="../polymer/polymer.html">
 
 <!--
 
@@ -19,11 +39,106 @@ Example:
       :host {
         display: block;
         box-sizing: border-box;
+        @apply(--paper-font-common-base);
+      }
+      paper-tabs {
+        --paper-tabs-selection-bar: {
+          height: 3px;
+        };
+      }
+      paper-tab {
+        @apply(--layout-flex-auto);
+      }
+      paper-toolbar .middle {
+        height: 100%;
+        margin-left: 48px;
+        top:8px;
+      }
+      paper-menu {
+        padding: 0;
+        --paper-menu-focused-item-after: {
+          background: transparent;
+        };
+        --paper-menu-selected-item: {
+          color: var(--default-primary-color);
+        }
+      }
+      #lateralBar {
+        border-right: 1px solid var(--divider-color);
+      }
+      #content {
+        min-height: 100vh;
+      }
+      #name {
+        font-size: 18px;
+        font-weight: normal;
+      }
+      #categoryName {
+        padding-left: 60px;
+        font-weight: bold;
+        font-size: 28px;
+      }
+      #drawerToolbar {
+        --paper-toolbar-background: white;
+        --paper-toolbar-color: var(--primary-text-color);
+        border-bottom: 1px solid var(--divider-color);
+      }
+      paper-icon-item {
+        position: relative;
+        --paper-item-focused-before: {
+          display: none;
+        };
+        cursor: pointer;
+      }
+      paper-ripple {
+        color: var(--paper-grey-500);
       }
     </style>
-    <content></content>
-  </template>
 
+    <paper-drawer-panel id="paperDrawerPanel" drawer-width="[[drawerWidth]]">        
+      <paper-scroll-header-panel drawer fixed id="lateralBar">
+        <paper-toolbar id="drawerToolbar">
+          <span id="name">[[name]]</span>
+        </paper-toolbar>
+        <paper-menu attr-for-selected="route" selected="{{selected}}">
+          <template is="dom-repeat" items="[[items]]">
+            <paper-icon-item route="[[item.route]]">
+              <iron-icon icon="[[item.icon]]" item-icon></iron-icon>
+              [[item.name]]
+              <paper-ripple></paper-ripple>
+            </paper-icon-item>
+          </template>
+        </paper-menu>
+      </paper-scroll-header-panel>
+      <paper-scroll-header-panel main keep-condensed-header condenses scroll-away-topbar header-state="{{headerState}}">
+        <paper-toolbar id="mainToolbar" class="tall shadow-transition">
+          <div class="center horizontal layout fit">
+            <paper-icon-button id="paperToggle" icon="menu" paper-drawer-toggle></paper-icon-button>
+            <iron-pages
+              attr-for-selected="route"
+              selected="[[selected]]"
+              class="flex">
+              <template is="dom-repeat" items="[[items]]">
+                <span route="[[item.route]]" id="categoryName">[[item.name]]</span>
+              </template>
+            </iron-pages>
+          </div>
+          <iron-pages id="slideTop" attr-for-selected="route" selected="{{selected}}" class="middle center horizontal layout fit">
+            <template is="dom-repeat" items="[[items]]" as="category">
+              <paper-tabs attr-for-selected="page" route="[[category.route]]" selected="{{category.selected}}" noink>
+                <template is="dom-repeat" items="[[category.items]]" as="page">
+                  <paper-tab page="[[page.route]]">[[page.name]]</paper-tab>
+                </template>
+              </paper-tabs>
+            </template>
+          </iron-pages>
+        </paper-toolbar>
+        <div id="content">
+          <content></content>
+        </div>
+      </paper-scroll-header-panel>
+    </paper-drawer-panel>
+  </template>
 </dom-module>
 
 <script>
@@ -33,7 +148,46 @@ Example:
     is: 'backend-template',
 
     properties: {
-
+      drawerWidth: {
+        type: String,
+        value: '220px'
+      },
+      headerState: {
+        type: Number,
+        observer: 'headerStateChange'
+      },
+      name: {
+        type: String,
+        value: 'Backend'
+      },
+      selected: String,
+      attrForSelected: {
+        type: String,
+        value: 'route'
+      }
+    },
+    behaviors: [
+      Polymer.IronSelectableBehavior
+    ],
+    listeners: {
+      'paper-header-transform': 'transformToolbar'
+    },
+    attached: function() {
+      this.selected = this.items[0].route;
+    },
+    transformToolbar: function(e) {
+      Polymer.Base.transform('translate3d(0,' +  Math.min(1, e.detail.y / (e.detail.height - e.detail.condensedHeight)) * 100 + '%,0)', this.$.slideTop);
+    },
+    headerStateChange: function(headerState) {
+      switch (headerState) {
+        case Polymer.PaperScrollHeaderPanel.HEADER_STATE_HIDDEN:
+          this.toggleClass('shadow-elevation-4dp', true, this.$.mainToolbar);
+          break;
+        case Polymer.PaperScrollHeaderPanel.HEADER_STATE_INTERPOLATED:
+          this.toggleClass('shadow-elevation-4dp', false, this.$.mainToolbar);
+          break;
+      }
+      console.log(headerState);
     }
 
   });
