--- a/demo/index.html
+++ b/demo/index.html
@@ -15,24 +15,61 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <title>backend-template Demo</title>
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
     <link rel="import" href="../backend-template.html">
+    <link rel="import" href="../../paper-material/paper-material.html">
   </head>
   <body unresolved>
-
+    <style is="custom-styles">
+      paper-material {
+        padding: 30px;
+      }
+    </style>
     <backend-template name="EASY BACKEND">
       <backend-category icon="icons:home" name="Category 1" route="cat1">
         <backend-page name="PAGE 1" route="page1">
-        <p>a</p>
+          <paper-material elevation="1">
+            <h1>Content page 1</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </paper-material>
         </backend-page>
         <backend-page name="PAGE 2" route="page2">
-        <p>b</p>
+          <paper-material elevation="1">
+            <h1>Content page 2</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </paper-material>
         </backend-page>
       </backend-category>
       <backend-category icon="icons:dashboard" name="Category 2" route="cat2">
         <backend-page name="PAGE 3" route="page3">
-        <p>c</p>
+          <paper-material elevation="1">
+            <h1>Content page 3</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </paper-material>
         </backend-page>
         <backend-page name="PAGE 4" route="page4">
-        <p>d</p>
+          <paper-material elevation="1">
+            <h1>Content page 4</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </paper-material>
         </backend-page>
       </backend-category>
     </backend-template>
