--- a/backend-category.html
+++ b/backend-category.html
@@ -1,8 +1,8 @@
 <link rel="import" href="../iron-selector/iron-selectable.html">
+<link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
 <!-- <link rel="import" href="../neon-slideshow/neon-slideshow-behavior.html">
 <link rel="import" href="../neon-slideshow/neon-slideshow-shared-styles.html"> -->
 <link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="backend-page.html">
 
 <!--
 
@@ -19,6 +19,9 @@ Example:
 
   <template>
     <style>
+      :host: {
+        @apply(--layout-fit);
+      }
       :host:not(.iron-selected) {
         display: none;
       }
