--- a/backend-template.html
+++ b/backend-template.html
@@ -1,4 +1,3 @@
-<link rel="import" href="backend-category.html">
 <link rel="import" href="../iron-icon/iron-icon.html">
 <link rel="import" href="../iron-icons/iron-icons.html">
 <link rel="import" href="../iron-flex-layout/classes/iron-flex-layout.html">
@@ -12,6 +11,7 @@
 <link rel="import" href="../paper-menu/paper-submenu.html">
 <link rel="import" href="../paper-ripple/paper-ripple.html">
 <link rel="import" href="../paper-scroll-header-panel/paper-scroll-header-panel.html">
+<link rel="import" href="../paper-header-panel/paper-header-panel.html">
 <link rel="import" href="../paper-styles/typography.html">
 <link rel="import" href="../paper-styles/classes/shadow.html">
 <link rel="import" href="../paper-styles/color.html">
@@ -88,9 +88,9 @@ Example:
       }
     </style>
 
-    <paper-drawer-panel id="paperDrawerPanel" drawer-width="[[drawerWidth]]">        
+    <paper-drawer-panel drawer-width="[[drawerWidth]]">        
       <paper-scroll-header-panel drawer fixed id="lateralBar" class="shadow-elevation-16dp">
-        <paper-toolbar id="drawerToolbar">
+        <paper-toolbar>
           <span id="name">[[name]]</span>
         </paper-toolbar>
         <paper-menu attr-for-selected="route" selected="{{selected}}">
