use effective children & improve demo

--- a/backend-category.html
+++ b/backend-category.html
@@ -19,11 +19,11 @@ Example:
 
   <template>
     <style>
-      :host: {
+      :host {
         @apply(--layout-fit);
       }
       :host:not(.iron-selected) {
-        display: none;
+        display: none !important;
       }
     </style>
     <!-- <div id="slides"> -->
