--- a/demo/index.html
+++ b/demo/index.html
@@ -14,87 +14,24 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
     <title>backend-template Demo</title>
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
+    <link rel="import" href="../../paper-material/paper-material.html">
     <link rel="import" href="../backend-template.html">
     <link rel="import" href="../backend-category.html">
     <link rel="import" href="../backend-page.html">
-    <link rel="import" href="../backend-list-detail.html">
-    <link rel="import" href="../../paper-material/paper-material.html">
-    <link rel="import" href="../../paper-item/paper-item.html">
-    <link rel="import" href="../../paper-item/paper-item-body.html">
-    <link rel="import" href="../../iron-ajax/iron-ajax.html">
-
-<link rel="import" href="../../iron-list/iron-list.html">
-
   </head>
   <body unresolved>
     <style is="custom-styles">
       paper-material {
         padding: 30px;
-      }
-      img {
-        border-radius: 50%;
-        width: 50px;
-        height: 50px;
-        margin-right: 30px;
-        margin-left: 20px;
-      }
-      paper-item {
-        border-bottom : 1px solid lightgrey;
+        margin: 30px 0;
       }
     </style>
     <template is="dom-bind" id="test">
-      <iron-ajax url="data/contacts.json" last-response="{{data}}" auto></iron-ajax>
       <backend-template name="EASY BACKEND">
         <backend-category icon="icons:home" name="Category 1" route="cat1">
-          <backend-list-detail name="PAGE 1" route="pagex" url="data/contacts.json" data="[[data]]">
-            <template class="item-template">
-              <paper-item>
-                <img src="[[item.image]]">
-                <paper-item-body two-line>
-                  <div>[[item.name]]</div>
-                  <div secondary>[[item.email]]</div>
-                </paper-item-body>
-                <span>[[item.city]]</span>
-              </paper-item>
-            </template>
-            <template class="detail-template">
-              <h1>[[name]]</h1>
-              <h2>[[email]]</h2>
-              <h2>[[address]]</h2>
-            </template>
-          </backend-list-detail>
-        </backend-category>
-        <backend-category icon="icons:dashboard" name="Category 2" route="cat2">
-          <backend-page name="PAGE 1" route="page1">
-            <paper-material elevation="1">
-              <h1>Content page 1</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </paper-material>
-            <paper-material elevation="1">
-              <h1>Content page 1</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </paper-material>
-            <paper-material elevation="1">
-              <h1>Content page 1</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </paper-material>
-            <paper-material elevation="1">
-              <h1>Content page 1</h1>
+          <backend-page name="PAGE A" route="page-a">
+            <paper-material>
+              <h1>Content page A</h1>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
               tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
               quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -103,9 +40,69 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </paper-material>
           </backend-page>
-          <backend-page name="PAGE 2" route="page2">
-            <paper-material elevation="1">
-              <h1>Content page 2</h1>
+          <backend-page name="PAGE B" route="page-b">
+            <paper-material>
+              <h1>Content page B</h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </paper-material>
+          </backend-page>
+        </backend-category>
+        <backend-category icon="icons:dashboard" name="Category 2" route="cat2">
+          <backend-page name="PAGE C" route="page-c">
+            <paper-material>
+              <h1>Content page C</h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </paper-material>
+            <paper-material>
+              <h1>Content page C</h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </paper-material>
+            <paper-material>
+              <h1>Content page C</h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </paper-material>
+            <paper-material>
+              <h1>Content page C</h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </paper-material>
+            <paper-material>
+              <h1>Content page C</h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </paper-material>
+          </backend-page>
+          <backend-page name="PAGE D" route="page-d">
+            <paper-material>
+              <h1>Content page D</h1>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
               tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
               quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -117,9 +114,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </backend-category>
       </backend-template>
     </template>
-    <script>
-      var test = document.querySelector('#test');
-      console.log(test);
-    </script>
   </body>
 </html>
