update bower.json & readme & description

--- a/backend-template.html
+++ b/backend-template.html
@@ -28,7 +28,13 @@
 
 Example:
 
-    <backend-template></backend-template>
+    <backend-template name="Backend title">
+      <backend-category icon="icons:home" name="Category 1" route="category-1">
+        <backend-page name="PAGE A" route="page-a">
+          <h1>Content page A</h1>
+        </backend-page>
+      <backend-category>
+    </backend-template>
 
 @group Seed Elements
 @element backend-template
